# DeskTag

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  skills-lock.json
.cargo-husky/hooks/: pre-commit
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-06-tray-icon.md  2026-06-06-virtual-desktop-badge.md  2026-06-07-badge-position.md  2026-06-07-msi-installer.md  2026-06-07-pre-commit-cargo-husky.md  2026-06-07-theme-aware-badge.md
docs/superpowers/specs/: 2026-06-06-tray-icon-design.md  2026-06-06-virtual-desktop-badge-design.md  2026-06-07-badge-position-design.md  2026-06-07-msi-installer-design.md  2026-06-07-pre-commit-cargo-husky-design.md  2026-06-07-theme-aware-badge-design.md
src/: badge.rs  config.rs  desktop.rs  edit.rs  icon.rs  label.rs  main.rs  position.rs  theme.rs
wix/: main.wxs
