[package]
name = "desktag"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "desktag"
path = "src/main.rs"

[dependencies]
winvd = "0.0.49"
anyhow = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Registry",
]

[build-dependencies]
winresource = "0.1"
